# calendar_mirror

./: .gitignore  Cargo.toml  README.md  TAGS  config.json  graph  refresh.json
docs/: #notes.org#  .#notes.org  appointments_stm.dot  cal_machine.dot  curl_cmds.org  display_stm.dot  ev_stm.dot  example_stm.dot  gantt.org  gantt.tjp  long_press_button_stm.dot  notes.org  screen_log.txt  std.dot  tokenising_stm.dot
docs/reports/: Plan.html
scrapbook/: cmdline.txt  fstab  packages.txt
scripts/: calendar_mirror_server.py  server.py
src/: cal_display.rs  cal_machine.rs  display.rs  err.rs  formatter.rs  gio_in.rs  gpio_in.rs  main.rs  new_type.rs  papirus_in.rs  std.rs  stm.rs  systemd1.rs
src/cal_machine/: evs.rs  retriever.rs
systemd/: calendar_mirror.service
