[package]
name = "calendar_mirror"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

[dependencies]
url="1.7.2"
serde={version = "1.0.92", features = ["derive"]}
serde_json="1.0.39"
reqwest="0.9.18"
chrono="0.4"
dot = "0.1.4"
memmap="0.7.0"

[features]
render_stm = [] # feature has no explicit dependencies