[package]
name = "calendar_mirror"
version = "0.1.6"
authors = ["Kieran White"]
edition = "2018"

[dependencies]
url="1.7.2"
serde={version = "1.0.92", features = ["derive"]}
serde_json="1.0.39"
reqwest="0.9.18"
chrono="0.4"
dot = "0.1.4"
memmap="0.7.0"
nix = "0.14.1"
unicode-segmentation="1.3.0"

[dependencies.ctrlc]
version="3.1.3"
features=["termination"]

[features]
render_stm = [] # feature has no explicit dependencies

